update member modal

--- a/translations/en/members.json
+++ b/translations/en/members.json
@@ -9,6 +9,7 @@
 		"role": "Role",
 		"color": "Preferred color",
 		"description": "Description",
+		"noDescription": "No description",
 		"isArchived": "Archived?"
 	}
 }
