--- a/translations/en/testingGrounds.json
+++ b/translations/en/testingGrounds.json
@@ -1,4 +1,3 @@
 {
-	"header": "Testing grounds",
-	"warning": "content here will change to test translations, dun worry"
+	"header": "Testing grounds"
 }
