reorder tags and translate string fixed

--- a/translations/en/members.json
+++ b/translations/en/members.json
@@ -8,7 +8,7 @@
 		"pronouns": "Pronouns",
 		"role": "Role",
 		"color": "Preferred color",
-		"tags": "Tags",
+		"tags": "Edit tags",
 		"description": "Description",
 		"noDescription": "No description",
 		"customFront": "Custom front",
