Half-assed About page

--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -95,6 +95,8 @@
 		}
 	},
 	"about": {
-		"header": "About"
+		"header": "About",
+		"version": "version",
+		"madein": "Made with love in Italy"
 	}
 }
