--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -12,9 +12,10 @@
 		"header": "Front history",
 		"edit": {
 			"header": "Edit fronting entry",
-			"member": "Edit member",
-			"startTime": "Edit start time",
-			"endTime": "Edit end time",
+			"member": "Edit fronting member",
+			"customStatus": "Custom status",
+			"startTime": "Start time",
+			"endTime": "End time",
 			"endTimeUnavailable": "To edit the end time, first remove this member from front",
 			"isMainFronter": "Main fronter?",
 			"delete": {
