--- a/translations/en/other.json
+++ b/translations/en/other.json
@@ -4,5 +4,9 @@
 	},
 	"memberSelect": {
 		"header": "Select a member"
+	},
+	"storagePersistence": {
+		"header": "Warning",
+		"content": "Ampersand cannot store data persistently on your device. If you're on Firefox, please give Ampersand permission to do so. If you're on Chrome, please install Ampersand as a web app / add it to your Desktop/Home screen. If this message doesn't go away, consider backing up your data often from the Import/Export section."
 	}
 }
