some locale work

--- a/translations/en/other.json
+++ b/translations/en/other.json
@@ -1,4 +1,8 @@
 {
+	"languageName": {
+		"local": "English",
+		"inEnglish": "English"
+	},
 	"taglistSelect": {
 		"header": "Select some tags"
 	},
