--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -59,7 +59,21 @@
 		"header": "Reminders"
 	},
 	"appSettings": {
-		"header": "App settings"
+		"header": "App settings",
+		"localeLabel": "Locale management",
+		"locale": {
+			"language": "Change language",
+			"clock": {
+				"title": "Clock style",
+				"12h": "12-hour clock",
+				"24h": "24-hour clock"
+			},
+			"firstDayOfWeek": {
+				"title": "First day of week",
+				"sunday": "Sunday",
+				"monday": "Monday"
+			}
+		}
 	},
 	"security": {
 		"header": "Security",
