add inter as default font, lexend as third highly readable option

--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -92,7 +92,8 @@
 		"highLegibilityFontType": {
 			"title": "High legibility font family",
 			"atkinson": "Atkinson Hyperlegible",
-			"opendyslexic": "OpenDyslexic"
+			"opendyslexic": "OpenDyslexic",
+			"lexend": "Lexend"
 		},
 		"uiVariant": {
 			"title": "UI variant",
