--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -10,6 +10,7 @@
 	},
 	"frontHistory": {
 		"header": "Front history",
+		"searchPlaceholder": "Search the fronting history...",
 		"currentlyFronting": "Currently fronting",
 		"edit": {
 			"header": "Edit fronting entry",
