long press accessibility setting

--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -120,6 +120,9 @@
 		},
 		"chatFontScale": {
 			"title": "Chat UI size"
+		},
+		"longPressDuration": {
+			"title": "Long press duration"
 		}
 	},
 	"importExport": {
