default search queries and programmatic search queries

--- a/translations/en/members.json
+++ b/translations/en/members.json
@@ -27,6 +27,7 @@
 		"delete": {
 			"title": "Delete member",
 			"desc": "You won't be able to undo this action!"
-		}
+		},
+		"memberID": "Member ID: {{memberID}}"
 	}
 }
