--- a/translations/en/dashboard.json
+++ b/translations/en/dashboard.json
@@ -1,3 +1,12 @@
 {
-	"header": "Dashboard"
+	"header": "Dashboard",
+	"header_salute": "Hello!",
+	"header_mainfronter": "Hi, {{fronterName}}!",
+	"nowFronting": "Now fronting",
+	"recentFrontingHistory": "Recently switched out",
+	"messageBoard": {
+		"header": "Message board",
+		"add": "Add to message board",
+		"view": "View more..."
+	}
 }
