--- a/translations/en/members.json
+++ b/translations/en/members.json
@@ -22,8 +22,8 @@
 		"isCustomFront": "Set as custom front",
 		"archived": "Archived",
 		"isArchived": "Set as archived",
-		"showBoardEntries": "Show board entries",
-		"showJournalEntries": "Show journal entries",
+		"showBoardEntries": "Show board messages",
+		"showJournalEntries": "Show journal posts",
 		"delete": {
 			"title": "Delete member",
 			"desc": "You won't be able to undo this action!"
