--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -128,6 +128,10 @@
 			"title": "App lock",
 			"desc": "Lock the application with a password"
 		},
+		"biometrics": {
+			"title": "Use biometrics",
+			"desc": "Unlock via your fingerprint or face"
+		},
 		"editPassword": "Modify password",
 		"inputPassword": {
 			"title": "Enter a password",
