--- a/translations/ro/lock.json
+++ b/translations/ro/lock.json
@@ -1,4 +1,8 @@
 {
 	"title": "Aplicația este încuiată",
-	"hint": "Vă rugăm să vă introduceți parola"
+	"hint": "Vă rugăm să vă introduceți parola",
+	"biometrics": {
+		"title": "Aplicația este încuiată",
+		"reason": "Deblocați aplicația"
+	}
 }
