--- a/translations/ro/options.json
+++ b/translations/ro/options.json
@@ -130,6 +130,10 @@
 			"title": "Încuiere aplicație",
 			"desc": "Încuiați aplicația cu o parola"
 		},
+		"biometrics": {
+			"title": "Utilizați autentificarea biometrică",
+			"desc": "Deblocare prin amprentă sau față"
+		},
 		"editPassword": "Modificați parola",
 		"inputPassword": {
 			"title": "Introduceți parola",
