--- a/translations/ro/options.json
+++ b/translations/ro/options.json
@@ -198,7 +198,7 @@
 			"desc": "Atenție! Această acțiune suprascrie setările actuale"
 		},
 		"settingsExport": {
-			"title": "Exportați-vă setările dintr-un fișier",
+			"title": "Exportați-vă setările într-un fișier",
 			"desc": "Salvați setările actuale într-un fișier care poate fi apelat ulterior"
 		}
 	},
