--- a/translations/it/dashboard.json
+++ b/translations/it/dashboard.json
@@ -6,7 +6,7 @@
 	"recentFrontingHistory": "Uscitə dal front recentemente",
 	"messageBoard": {
 		"header": "Bacheca dei messaggi",
-		"add": "Aggiungi alla bacheca",
-		"view": "Vedi di più..."
+		"add": "Aggiungi messaggio",
+		"view": "Vedi tutti"
 	}
 }
