--- a/translations/ro/dashboard.json
+++ b/translations/ro/dashboard.json
@@ -7,6 +7,6 @@
 	"messageBoard": {
 		"header": "Tabla de mesaje",
 		"add": "Adăugați pe tabla de mesaje",
-		"view": "Vedeți mai multe..."
+		"view": "Vedeți mai multe"
 	}
 }
