--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -117,6 +117,11 @@
 			},
 
 			"periodic": {
+				"title": "Interval of time",
+				"timeOfDay": {
+					"title": "Time of day",
+					"desc": "At {{timeOfDay}}"
+				}
 
 			}
 		}
