--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -41,6 +41,7 @@
 			"member": "Edit message author",
 			"title": "Title",
 			"body": "Message body",
+			"isPinned": "Pinned",
 			"delete": {
 				"title": "Delete message on board",
 				"desc": "You won't be able to undo this action!"
