Added archived member count

--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -9,7 +9,7 @@
 		"systemName": "System name",
 		"systemDescription": "System description",
 		"memberCount": "Member count",
-		"memberCountText": "{{memberCount}} member(s)",
+		"memberCountText": "{{memberCount}} member(s), {{archivedMemberCount}} archived",
 		"tapToShow": "Tap to show"
 	},
 	"frontHistory": {
