--- a/translations/it/options.json
+++ b/translations/it/options.json
@@ -9,7 +9,7 @@
 		"systemName": "Nome del sistema",
 		"systemDescription": "Descrizione del sistema",
 		"memberCount": "Numero dei membrɜ",
-		"memberCountText": "{{memberCount}} membrɜ",
+		"memberCountText": "{{memberCount}} membrɜ, {{archivedMemberCount}} archiviatɜ",
 		"tapToShow": "Clicca per mostrare"
 	},
 	"frontHistory": {
