--- a/translations/it/options.json
+++ b/translations/it/options.json
@@ -87,6 +87,10 @@
 				}
 			}
 		}
+	},	
+	"assetManager": {
+		"header": "Gestore degli asset",
+		"searchPlaceholder": "Cerca tra gli asset..."
 	},
 	"reminders": {
 		"header": "Promemoria",
